@@ -17,6 +17,7 @@
   * Added a function to lsl.imaging.utils to make it easy to re-phase a data dictionary to a new pointing center
   * Added new functions to the LWAStation class to deal with direction and distance to other stations/points on the Earth
   * Generalized the computeUVW() and computeUVTrack() functions
+  * Added a disk-based cache to the lsl.misc.geodesy module to help keep network traffic down
 
 0.6.6
   * Fixed a problem with older NumPy installs not having a close() function
